tooling2 in progress

--- a/_posts/2024-05-25-sausage.md
+++ b/_posts/2024-05-25-sausage.md
@@ -13,13 +13,13 @@ The tooling I have developed for this is working quite well, and it lets me elim
 
 ![process](/images/process_stable.svg)
 
-The first step is of course importing the game executable into IDA, where I do most of the analysis and assign meaningful names to routines and data. I don't do this all in one go, rather pick up one routine for analysis and reconstruction, walk through the full process to completion, then move to another routine. An important part in this step is figuring out data references, especially where hardcoded offsets are present in the disassembly shown by IDA that are not identified as references to data - all hard-baked numbers need to be scrutinied and changed into symbols if appropriate, otherwise the reconstructed binary will not work when the layout of the data changes.
+The first step is of course importing the game executable into IDA, where I do most of the analysis and assign meaningful names to routines and data. I don't do this all in one go, rather pick up one routine for analysis and reconstruction, walk through the full process to completion, then move to another routine. An important part in this step is figuring out data references, especially where hardcoded offsets are present in the disassembly shown by IDA that are not identified as references to data - all hard-baked numbers need to be scrutinized and changed into symbols if appropriate, otherwise the reconstructed binary will not work when the layout of the data changes.
 
 I make IDA spit out two files: the `.lst` listing file, and an include `.inc` file with the definitions of all structs and the values of constants (equates). I do this whenever I modify the IDA database.
 
 I am also feeding the game executable to [`mzmap`](https://github.com/neuviemeporte/mzretools), my tool for walking through the opcodes, following calls and jumps and figuring out the boundaries of subroutines. I could get this information from the IDA listing, but originally I did not have all routines properly identified in IDA, so I implemented this tool to be able to figure out where code was and which parts were reachable for comparison with the other tool, `mzdiff`. Additionally, it was not easy to figure out which regions were reachable from parsing the IDA listing, or at least as much work as to implement a code walker. Just don't ask, OK? 😉
 
-I need to run `mzmap` only once, then the `.map` file it generates is periodically updated, whenever I assign a new name to a routine in IDA, or e.g. when a code region that was identified by the tool as unreachable needs to be included in the analysis (there's no way to apply this information automatically, for now). Here's an example of how the mapfile looks like:
+I ran `mzmap` only once, and the `.map` file it generates is periodically manually updated whenever I assign a new name to a routine in IDA, or when a routine's boundaries need to change (there's no way to apply this information automatically, for now). Here's an example of how the mapfile looks like:
 
 <pre>
 Code1 CODE 0000
@@ -108,7 +108,7 @@ The C code I have written is compiled with the MS C compiler v5.1 which was used
 
 The compiler spits out `.obj` object files, which I link with the object file that came from assembling the `.asm` with UASM containing the data and the routine stubs using the Microsoft linker that came with the MSC 5.1 compiler, and I get a (partially) reconstructed executable version of the game (which does not run for now). 
 
-Finally, I launch my `mzdiff` tool to compare my reconstructed executable (the target) with the original (the reference). I also provide it with starting locations in both executables, as well as information on which routines should be skipped in the comparison, in order to ignore libc functions and some other minor cruft. For now, it will follow a BFS path from the starting location, but I plan to make changes to that soon. It displays the instructions of the compared binaries side by side, annotating the non-critical differences (like offsets to data and code, which are not identical between the two), and stops on the first mismatch, displaying the location along with some additional information. This forms the final, feedback step of the process so I can either fix the discrepancy by tweaking the `.c` code, the `.map` routine blocks, and the `.json` config (sometimes I need to go all the way back to IDA for either analysis or modification of the listing), or I can begin the process anew by moving onto the next routine.
+Finally, I launch my `mzdiff` tool to compare my reconstructed executable (the target) with the original (the reference). I also provide it with starting locations in both executables, as well as information on which routines should be skipped in the comparison, in order to ignore libc functions and some other minor cruft. It follows a BFS path from the starting location and displays the instructions of the compared binaries side by side, annotating the non-critical differences (like offsets to data and code, which are not identical between the two), and stops on the first mismatch, displaying the location along with some additional information. This forms the final, feedback step of the process so I can either fix the discrepancy by tweaking the `.c` code, the `.map` routine blocks, and the `.json` config (sometimes I need to go all the way back to IDA for either analysis or modification of the listing), or I could conclude that I'm done with this one and move onto the next routine.
 
 Most of this is wrapped in a Makefile, so when I run `make verify`, it will:
 
