--- a/_posts/2025-01-01-unstart2.md
+++ b/_posts/2025-01-01-unstart2.md
@@ -117,10 +117,10 @@ I removed the unneeded segment declaration from the assembly file, and replaced 
 
 I swear, I've never been so happy to see the game title screen before. It does not matter that it crashed upon reaching the pilot selection screen. For it to display the splash screen, a bunch of important things must be going right:
 
-1. The overlay drivers are working
-2. The layout of the data segment is fine
-3. The hardcoded memory addresses replaced with references to variables are set up correctly
+1. The overlay drivers are being set up correctly
+2. The executable is healthy, able to call into C code, assembly code and the overlays plus return without issue
+2. The different layout of the data segment is not preventing the game from working, meaning (most of) the data references were resolved correctly
 
-Better still, this validates my methodology with using `mzdiff` to compare the code while reconstructing it, proving that the approach is viable. Sometimes when I'm looking at the diagram in [the tool's README](https://github.com/neuviemeporte/mzretools?tab=readme-ov-file#mzretools), it makes me think it's too convoluted and ridiculous, but that's just what it takes to dissect and put the game back together. Without the tooling, all the arrows would just be going to the person shape, and I would have to do all of this stuff manually anyway.
+Better still, this validates my methodology with using `mzdiff` to compare the code while reconstructing it, proving that the approach is viable. Sometimes when I'm looking at the diagram in [the tools' README](https://github.com/neuviemeporte/mzretools?tab=readme-ov-file#mzretools), it makes me think it's too convoluted and ridiculous, but that's just what it takes to dissect and put the game back together. Without the tooling, none of this would have been any simpler -- all the arrows would just be going to the person shape, and I would have to do all of this stuff manually anyway.
 
 I must say I am pretty happy with my New Year's present. Looking forward to getting the first part of the game fully running soon.
