--- a/_posts/2024-02-28-elephant.md
+++ b/_posts/2024-02-28-elephant.md
@@ -392,7 +392,8 @@ Processed 944 signatures, ignored 0 as too short
 Tried to find matches for 400 target exe routines (22524 instructions, 100%)
 Found 22 (unique: 20) matching routines (743 instructions, <r>3%</r>)
 Unable to find 378 matching routines (97%)
-WARNING: Some routines were found as duplicates of more than one routine. This is possible, but unlikely. Try using a longer minimum routine size and/or lower distance threshold to avoid false positives.
+WARNING: Some routines were found as duplicates of more than one routine. This is possible, but unlikely. 
+Try using a longer minimum routine size and/or lower distance threshold to avoid false positives.
 Saving code map (routines = 400) to map/egame.map.dup, reversing relocation by 0x1000
 </pre>
 
