--- a/_posts/2025-07-04-egame10.md
+++ b/_posts/2025-07-04-egame10.md
@@ -28,7 +28,7 @@ Missed (not seen and not excluded) 229 routines totaling 52517/0xcd25 bytes (<r>
 
 Mind that some of that 52k will turn out to be assembly so not target for the reconstruction per se, but will need porting to C anyway. So ultimately, more work, just later.
 
-Seeing as it's been almost exactly a month since I've started actually transcribing the code (it was a lot of preparatory work to get the new executable building in my framework before that), that means that I'm roughly able to do 10k in a month, so theoretically if I went all in, I could probably finish the transcription within 5-6 months. Incidentally, this 10k/month lines up with what Fabien Sanglard based his calculations on when considering whether [reversing Strike Commander](https://fabiensanglard.net/reverse_engineering_strike_commander/index.php) would be possible, before deciding it would take too many years. I think he might have been a bit pessimistic, because of those binaries' size, a lot is bound to be data, some might be libc... But I'm still happy my game is smaller. 😁 
+Seeing as it's been almost exactly a month since I've started actually [transcribing the code]({% post_url 2025-03-06-back-egame %})  (it was a lot of preparatory work to get the new executable building in my framework before that), that means that I'm roughly able to do 10k in a month, so theoretically if I went all in, I could probably finish the transcription within 5-6 months. Incidentally, this 10k/month lines up with what Fabien Sanglard based his calculations on when considering whether [reversing Strike Commander](https://fabiensanglard.net/reverse_engineering_strike_commander/index.php) would be possible, before deciding it would take too many years. I think he might have been a bit pessimistic, because of those binaries' size, a lot is bound to be data, some might be libc... But I'm still happy my game is smaller. 😁 
 
 So, will `EGAME` be reconstructed around October? I really doubt it, it's probably going to take a year or more. I actually plan to take it easy for a while, with summer around the corner and more family functions and activities that inevitably brings. I also want to play a few games that I bought on Steam a while back but didn't even have time to check out. I'm not likely to stop completely, I'm just managing expectations (my own, mostly 😉) to clarify that I'm not going to be able to maintain this pace. But the future is looking bright, so don't fret. 
 
